fix(VsValueTag): font color for dark mode visibility

--- a/packages/vlossom/src/components/vs-value-tag/VsValueTag.scss
+++ b/packages/vlossom/src/components/vs-value-tag/VsValueTag.scss
@@ -24,7 +24,7 @@
         flex: 1;
         padding: 0 0.8rem;
         background-color: var(--vs-no-color);
-        color: var(--vs-comp-font);
+        color: var(--vs-font-color);
     }
 }
 
